src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Destination Services</fullName>
        <description>Destination Services Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Geography</fullName>
        <description>Geography Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Under Investigation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HDM</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Name Change Declined</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Closed - Watch</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Hotel Systems Technical Support</fullName>
        <description>Hotel Support Technical Support</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for Expedia MM%2FAM</fullName>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for RAID%2FJira</fullName>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for chain%2Fvendor</fullName>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for property</fullName>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for resource</fullName>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lodging Content</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Internal Information</fullName>
        </values>
        <values>
            <fullName>Waiting for Property%2FVendor Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Media %2F Virtual Tours</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Star Ratings</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Closed - Watch</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Request</fullName>
        <description>Used by GSO team to handle support requests from business teams</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Transport</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending Response</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_Status__c</fullName>
        <description>For HDM, this field is available if the Status is changed to &quot;Name Change Declined&quot;</description>
        <label>Additional Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>more than 60 characters; please advise your preferred abbreviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>special characters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>abbreviations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>all CAPITAL letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>location information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>an opening date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>amenities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>parentheses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>business abbreviations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>star ratings or asterisks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>descriptive tags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a new, unverified official name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotwire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EWW eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EWW Site Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG Connectivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Team - Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Team - Ticketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjusted_Case_Age__c</fullName>
        <description>Formula calculates the running time a case has been open. If the case has been closed, it calculates the difference between opened and closed dates. NOTE: Meter begins counting one day AFTER case was opened.</description>
        <formula>if( IsClosed =FALSE, (TODAY()-(datevalue(CreatedDate))), ( datevalue(ClosedDate) - (datevalue(CreatedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The difference between the current date and the date the case was opened. If the case has been closed, the difference is between the closed date and opened date.</inlineHelpText>
        <label>Adjusted Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Model__c</fullName>
        <description>Expedia selling model</description>
        <label>Agency Model</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Lookup__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>A list to choose Expedia.com (E*), Hotels.com (H*), or both</description>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>E*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carrier_Fare_Filed_Date__c</fullName>
        <label>Carrier Fare Filed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <label>Case Category</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>AVS recap requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accuracy Issues/Re-Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Routes for Shopping Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin tools sitesup (for airline dropdown)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM-related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEN Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AirCAT Exclusion of Carriers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline dropdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amadeus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anything geography specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baggage allowance changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFS Codeshare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking class configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier activation/deactivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier mis-filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changes to eligible for ticketing: airline, fare type,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creation, modify, delete, closure of queues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit card acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <label>Chain</label>
        <referenceTo>Chain__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Lookup_Results__c</fullName>
        <description>Shows the results of the contact/account matching logic for cases created via inbound email or web intake form</description>
        <label>Contact/Account Lookup Results</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DS_Number_of_Offerings__c</fullName>
        <description>Number of Offerings - Destination Services</description>
        <label>Number of Offerings</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department making the request</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>GSO - Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - PMSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - GLO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description_Rich_Text__c</fullName>
        <description>Rich text field to hold an inbound email&apos;s html body to preserve any rich text formatting.</description>
        <label>Description (Rich Text)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Button__c</fullName>
        <description>Email button to Auto populate From Address</description>
        <formula>CASE($RecordType.DeveloperName, 
&quot;Destination_Services&quot;, &quot;dsmaint@expedia.com&quot;,
 &quot;Geography&quot;, &quot;geosup@expedia.com&quot;,
 &quot;HDM&quot;, &quot;hdm@expedia.com&quot;,
 &quot;Star_Ratings&quot;, &quot;ratings@expedia.com&quot;,
 &quot;Media_Content&quot;, &quot;hotelphotos@expedia.com&quot;,
 &quot;Virtual_Tours_Content&quot;, &quot;expevt@expedia.com&quot;,
 &quot;Lodging_Content&quot;, &quot;content@expedia.com&quot;,
&quot;support@expedia.com&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Button</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Recipients__c</fullName>
        <label>Email Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Google_Translate__c</fullName>
        <label>Google Translate</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Involved__c</fullName>
        <label>Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Air CPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fare Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Fulfillment Process &amp; Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>T shirt size of how much effort task will be</description>
        <inlineHelpText>Small &lt; 1 hour
Medium 1 - 8 hours
Large 8 - 20 hours
Extra Large &gt; 20 hours</inlineHelpText>
        <label>Level of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Met_SLA__c</fullName>
        <description>Was SLA met?</description>
        <inlineHelpText>Was SLA met?</inlineHelpText>
        <label>Met SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Changes__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of changes; added for user to manually quantify the number of changes requested.  Defaults to 1.</description>
        <inlineHelpText>HDM = Number of Changes
Media &amp; Lodging Content = Number of Properties/Updates</inlineHelpText>
        <label>Number of Properties/Updates</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OFID__c</fullName>
        <label>OFID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <label>Offer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Case_Id__c</fullName>
        <description>external Id from PSG</description>
        <externalId>true</externalId>
        <label>PSG Case Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Case_Number__c</fullName>
        <label>PSG Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Owner_Email__c</fullName>
        <description>Email of the PSG Owner</description>
        <label>PSG Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PSG_Owner_Name__c</fullName>
        <description>Name for the Owner of the case in PSG</description>
        <label>PSG Owner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Record_Type__c</fullName>
        <label>PSG Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hotel Support MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Packages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Points_of_Sale__c</fullName>
        <label>Points of Sale</label>
        <picklist>
            <picklistValues>
                <fullName>1-Expedia United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Expedia United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Expedia Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-Expedia Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-Expedia Voyages-sncf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-Expedia Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-Expedia Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-Expedia Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-Expedia Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14-Expedia Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-Expedia Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-Expedia South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17-Expedia Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-Expedia France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-Expedia Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-Hotwire.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27-Expedia India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28-Expedia Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29-Expedia New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-Expedia Rewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>63-Expedia Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64-Expedia Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65-Expedia Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-Expedia Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>67-Expedia Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>69-Expedia Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-Expedia Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30001-WWTE United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30003-WWTE Alaska Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30004-WWTE United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Rank from GSO Org</description>
        <label>Rank</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Missed_SLA__c</fullName>
        <description>Reasons why SLA was missed.  Dependent upon a &quot;No&quot; answer from the &quot;Met SLA&quot; field</description>
        <label>Reason Missed SLA</label>
        <picklist>
            <controllingField>Met_SLA__c</controllingField>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed / No Reply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Images / VT Not Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA_Due_Date_ECD__c</fullName>
        <label>SLA Due Date (ECD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_booking_date_end__c</fullName>
        <label>Search booking date end</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_booking_date_start__c</fullName>
        <label>Search booking date start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selling_Model__c</fullName>
        <label>Selling Model</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stack_Rank__c</fullName>
        <label>Stack Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>